fixed styling issue with mod action header
when a title was sufficiently long, the mod actions would wrap down and look bad. They no longer wrap in that situation

--- a/mod-picker/app/assets/stylesheets/general/pageHeaders.scss
+++ b/mod-picker/app/assets/stylesheets/general/pageHeaders.scss
@@ -46,9 +46,17 @@
       padding: 10px;
       font-size: 12px;
       font-weight: 500;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+
+      div {
+        margin: 4px;
+      }
 
       .action-box {
         margin-right: -1px;
+        white-space: nowrap;
       }
     }
   }
